--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "repository": "git@github.com:casperstorm/shine-api.git",
   "author": "Casper Rogild Storm <casperstorm@me.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon ./src/index.js"
+  },
   "dependencies": {
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "node": "^10.3.0"
   },
   "devDependencies": {
