--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node": "^10.3.0",
-    "twitter-lite": "^0.5.0"
+    "rss-parser": "^3.1.3"
   },
   "devDependencies": {
     "@rise-digital/eslint-config-rise": "^2.2.1",
