--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "firebase": "^5.0.4",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node": "^10.3.0",
