--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "eslint": "^4.19.1",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.4"
+  },
+  "engines": {
+    "yarn": "1.7.0",
+    "node": "10.3.x"
   }
 }
