--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
+    "watch": "tsc -w",
     "serve": "yarn build && firebase serve --only functions",
     "shell": "yarn build && firebase functions:shell",
     "start": "yarn shell",
@@ -29,6 +30,8 @@
     "rss-parser": "^3.1.3"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/lodash": "^4.14.110",
     "prettier": "^1.13.4",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
