--- a/functions/package.json
+++ b/functions/package.json
@@ -8,9 +8,9 @@
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "watch": "tsc -w",
-    "serve": "yarn build && firebase serve --only functions",
-    "shell": "yarn build && firebase functions:shell",
-    "start": "yarn shell",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -26,7 +26,6 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "node": "^10.3.0",
     "rss-parser": "^3.1.3"
   },
   "devDependencies": {
