--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "firebase": "^5.0.4",
+    "firebase": "5.0.0",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.1.0",
     "jsonwebtoken": "^8.3.0",
