--- a/functions/package.json
+++ b/functions/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "rss-parser": "^3.1.3"
+    "rss-parser": "^3.1.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
